# Local-Coding-Agent-Shamsu

local-code-agent/: README.md  config.yaml  launch-agent-gui.bat  launch-agent-gui.ps1  launch-agent-gui.sh  launch-agent.bat  launch-agent.ps1  launch-agent.sh  pyproject.toml  requirements.txt
local-code-agent/agent/: __init__.py  config.py  diffs.py  doc_reader.py  indexer.py  main.py  memory.py  ollama_client.py  permissions.py  prompts.py  tool_loop.py  tools.py
local-code-agent/gui/: __init__.py  agent_loop_gui.py  events.py  launch.py  permissions_gui.py  server.py
local-code-agent/gui/static/: app.js  index.html  style.css
local-code-agent/scripts/: setup.ps1  setup.sh
