[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-code-agent"
version = "0.1.0"
description = "A fully offline, permission-gated coding agent for low-spec machines."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
    "PyYAML>=6.0.1",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
documents = ["pypdf>=4.0.0", "python-docx>=1.1.0"]

[project.scripts]
local-agent = "agent.main:main"

[tool.setuptools]
packages = ["agent"]
